--- a/js/package.json
+++ b/js/package.json
@@ -10,8 +10,12 @@
   "author": "Rachel Chen <rachel@chens.email>",
   "license": "MIT",
   "dependencies": {
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-replace": "^5.0.2",
+    "@rollup/plugin-strip": "^3.0.2",
     "@rollup/plugin-terser": "^0.4.0",
     "@rollup/plugin-typescript": "^11.0.0",
+    "@types/node": "^18.15.0",
     "rollup": "^3.18.0",
     "tslib": "^2.5.0",
     "typescript": "^4.9.5"
